--- a/Appendices/AppendixE.tex
+++ b/Appendices/AppendixE.tex
@@ -7,6 +7,6 @@
 \begin{figure}[htbp]
 \centering
 \includegraphics[height=18cm]{WSN2}
-\caption{Flow chart of the Waspmote program for end devices}
-\label{fig:flow}
+\caption{Flow chart of the Waspmote program for end devices ( $\circlearrowleft$ \ref{program} )}
+\label{fig:flow22}
 \end{figure}
