--- a/Appendices/AppendixG.tex
+++ b/Appendices/AppendixG.tex
@@ -1,4 +1,5 @@
-\section{Waspmote Program Remarks}
+\clearpage
+\section{Practical remarks}
 \label{AppendixG}
 \subsection{Application ID / Packet ID}
 The following Application IDs are reserved by Libelium and may not be used to identify packets:
@@ -13,8 +14,10 @@ The following Application IDs are reserved by Libelium and may not be used to id
 \item 0xFE\\
 \item 0xFF\\
 \end{itemize}
-\subsection{Read the Programming Style Guide available at \ref{http://www.libelium.com/development-v11/?product=waspmote&zone=tutorial0004}. }
-\subsection{Follow the 19 instructions from the Waspmote checklist available at \ref{http://www.libelium.com/forum/viewtopic.php?f=14&t=7700}. }
+\subsection{Read the Programming Style Guide available at:} 
+\url{http://www.libelium.com/development-v11/.product=waspmote&zone=tutorial0004}.
+\subsection{Follow the 19 instructions from the Waspmote checklist available at:}
+\url{http://www.libelium.com/forum/viewtopic.php?f=14&t=7700}.
 \subsection{Ready?}
 \begin{enumerate}
 \item Enable the \verb+#define FINAL+ pre-processor instruction in order to remove \verb+USB.begin()+ instructions from the program and to save battery power.
