--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -252,10 +252,17 @@
 }
 
 @ARTICLE{DARWIKI,
-		TITLE = "DARPA",
+		TITLE = "Atmel AVR",
 		AUTHOR = "Wikipedia",
 		YEAR = "2013",
 		MONTH = "April",
+}
+
+@ARTICLE{AVRWIKI,
+		TITLE = "DARPA",
+		AUTHOR = "Wikipedia",
+		YEAR = "2013",
+		MONTH = "May",
 }
 
 @ARTICLE{AUTO,
@@ -292,9 +299,68 @@
 	TITLE = "An Introduction to Wireless Sensor Networks",
 	ORGANIZATION = "KTH Royal Institute of Technology",
 	YEAR = "2011",
-	MONTH = "November"
+	MONTH = "November",
 }
 
+@ARTICLE{RASP,
+		TITLE = "Welcome to Raspbian",
+		AUTHOR = "Raspbian developers",
+		YEAR = "2013",
+		NOTE = "Available at: \url{http://www.raspbian.org/}",
+}
 
+@ARTICLE{RASPBERRY,
+		TITLE = "Raspberry Pi",
+		AUTHOR = "The Raspberry Pi Foundation",
+		YEAR = "2011",
+		NOTE = "Available at: \url{http://www.raspberrypi.org/}",
+}
 
+@ARTICLE{MONG,
+		TITLE = "Mongoose - easy to use web server",
+		AUTHOR = "Valenok",
+		YEAR = "2013",
+		NOTE = "Available at \url{https://code.google.com/p/mongoose/}",
+}
 
+@ARTICLE{XER,
+		TITLE = "Xerces-C++ XML Parser",
+		AUTHOR = "Xerces developers",
+		YEAR = "2010",
+		NOTE = "Available at \url{http://xerces.apache.org/xerces-c/}",
+}
+
+@ARTICLE{BOOST,
+		TITLE = "Boost C++ Libraries",
+		AUTHOR = "Boost developers",
+		YEAR = "2010",
+		NOTE = "Available at \url{http://www.boost.org}",
+}
+
+@ARTICLE{SQ,
+		TITLE = "SQLite",
+		AUTHOR = "SQLite developers",
+		YEAR = "2013",
+		NOTE = "Available at \url{http://www.sqlite.org/}",
+}
+
+@MANUAL{SWEET,
+	AUTHOR = "Michael R. Sweet",
+	TITLE = "Serial Programming Guide for POSIX Operating Systems",
+	YEAR = "1999",
+	NOTE = "Available at \url{http://www.cmrr.umn.edu/~strupp/serial.html}",
+}
+
+@ARTICLE{LIBSLEEP,
+		TITLE = "Sleep Options and buffers",
+		AUTHOR = "Libelium-dev, in response to Bjorn Deraeve",
+		YEAR = "2013",
+		NOTE = "Available at \url{http://www.libelium.com/forum/viewtopic.php?f=17&t=10432}",
+}
+
+@MANUAL{IPSUM,
+	AUTHOR = "Ruben Tacq",
+	TITLE = "Ipsum Service API",
+	YEAR = "2013",
+	NOTE = "Available at \url{http://www.rubycom.be/files/IpsumAPI.pdf}",
+}
