--- a/TitlePageEN.tex
+++ b/TitlePageEN.tex
@@ -21,16 +21,18 @@
 \vspace*{5em}
 
 \centerline{\bf ABSTRACT} \vspace*{0.2em}
-\noindent The abstract should be viewed as a miniature version of the paper. Since potential readers should be able to make their decision on the personal relevance based
-on the Abstract, the Abstract should clearly tell the reader what information he can expect
-to find in the paper. The Abstract should (1) state the principal objectives and scope of the
-investigation, (2) describe the methods employed, (3) summarize the results, and (4) state the
-principal conclusions. Most of the Abstract will be written in the past tense, because it refers
-to work done. The Abstract should never give any information or conclusion that is not stated
-in the paper. The authors should always keep in mind, that the Abstract is the most frequently
-read part of a paper. It should contain at most 200 words. Today, the Abstract is generally
-printed in one paragraph.  Define all symbols used in the Abstract. Do not cite references in
-the Abstract. Do not include or refer to tables and figures.
+\noindent Wireless Sensor Networking (WSN) is an emerging technology that is shaping the world around us. However, as WSNs proliferate, connecting these nodes becomes more and more challenging. 
+In this work we designed, implemented and configured a ZigBee WSN test-bed and a middleware communication layer to extract the sensor data from the network. This paper details the challenges we faced and the solutions we developed for them. These challenges are network stability, latency, energy consumption, quality of service and both event and query-based sensor acquisition. All these challenges have been implemented and tested with Libelium's first generation Waspmote. A stable monitoring network consisting of at least five nodes, including one weather station, was deployed at Group T, campus Vesalius. This network responds to several commands sent through a web interface. Developing this network has convinced us that ZigBee is well suited for networks that share our objectives. We conclude that ZigBee is a promising protocol with many possible applications. On the other hand, developing the network also leads us to conclude that Libelium's platform still faces practical limitations when extended with ZigBee. 
+%The abstract should be viewed as a miniature version of the paper. Since potential readers should be able to make their decision on the personal relevance based
+%on the Abstract, the Abstract should clearly tell the reader what information he can expect
+%to find in the paper. The Abstract should (1) state the principal objectives and scope of the
+%investigation, (2) describe the methods employed, (3) summarize the results, and (4) state the
+%principal conclusions. Most of the Abstract will be written in the past tense, because it refers
+%to work done. The Abstract should never give any information or conclusion that is not stated
+%in the paper. The authors should always keep in mind, that the Abstract is the most frequently
+%read part of a paper. It should contain at most 200 words. Today, the Abstract is generally
+%printed in one paragraph.  Define all symbols used in the Abstract. Do not cite references in
+%the Abstract. Do not include or refer to tables and figures.
 \\ \vspace*{2em}
 
 \centerline{\bf Keywords} \vspace*{0.2em}
